--- a/index_style.css
+++ b/index_style.css
@@ -2,15 +2,16 @@ h0{
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 40px;
-	border-radius: 10px;
-	border-width: 10px;
-	border-color: indigo;
-	background-color: #e3edcb
 }
-
+p.name{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 img.profile{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 
 }
+
