--- a/index_style.css
+++ b/index_style.css
@@ -3,10 +3,13 @@ h0{
 	font-family: sans-serif;
 	font-size: 40px;
 }
+p{
+	text-align: center;
+}
 p.name{
 	margin-left: auto;
 	margin-right: auto;
-	width: 6em;
+	width: 10em;
 }
 img.profile{
 	display: block;
