--- a/index_style.css
+++ b/index_style.css
@@ -9,7 +9,10 @@ p{
 p.name{
 	margin-left: auto;
 	margin-right: auto;
-	width: 10em;
+	width: 20em;
+	border-width: 1px;
+	border-style: solid;
+	
 }
 img.profile{
 	display: block;
