--- a/index_style.css
+++ b/index_style.css
@@ -12,12 +12,14 @@ p.name{
 	width: 20em;
 	border-width: 1px;
 	border-style: solid;
+	position: absolute;
 	
 }
 img.profile{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	position:relative;
 
 }
 
