--- a/index_style.css
+++ b/index_style.css
@@ -1,47 +1,77 @@
 .profile{
-	margin: auto;
 	width: 30%;
-
-}
-.image{
-	position: relative;
 	margin: auto;
-	top: 75px;
-	width:100%;
+	text-align: 
 }
+.content{
+	position: absolute;
+	width: 400px;
+	height: 500px;
+	margin: auto;
+	top: 50px;
+	background-color: yellow;
+	background-size: 100% 100%;
+	background-image: url('helloonce.gif');
+}
+.text{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	top:10px;
+}
+a:link    {
+  /* Applies to all unvisited links */
+  text-decoration:  none;
+  color:            black;
+  } 
+a:visited {
+  /* Applies to all visited links */
+  text-decoration:  none;
+  background-color: #ddd;
+  color:#e5b3cc;
+  } 
+p.resume:hover {
+  font-weight:      bold;
+  background-color: #71b1d6;
+  color:            #e5b3cc;
+ }
+ p.portfolio:hover {
+  font-weight:      bold;
+  background-color: yellow;
+  color:            black;
+ }
+
+a:active  {
+  /* Applies to activated links */
+  text-decoration:  underline;
+  font-weight:      lighter;
+  background-color: black;
+  color: white;
+  } 
 p.name{
 	text-align: center;
-	margin-left: 150px;
+	margin-left: 350px;
 	position: absolute;
 	width: 6em;
-	top:22em;
-	background-color: white;
+	top:10em;
 	font-size: 20px;
-}
-p.bio{
-	text-align: center;
-	margin-left: 300px;
-	position: absolute;
-	width: 2em;
-	top:25em;
-	background-color: white;
-	font-size: 20px;
+	color:white;
 }
 p.resume{
 	text-align: center;
-	margin-left: 75px;
 	position: absolute;
-	width: 3em;
-	top:25em;
+	width: 3.5em;
+	margin-left: 350px;
+	top:12em;
 	background-color: white;
 	font-size: 20px;
 }
 p.portfolio{
 	text-align: center;
-	margin-left: 75px;
 	position: absolute;
-	width: 3em;
-	top:15em;
+	width: 4em;
+	margin-left: 350px;
+	top:14em;
 	background-color: white;
 	font-size: 20px;
 }
