--- a/index_style.css
+++ b/index_style.css
@@ -8,7 +8,10 @@
 	width: 400px;
 	height: 500px;
 	margin: auto;
-	top: 50px;
+	top: 50%;
+	left: 50%;
+	margin-top: -250px;
+	margin-left: -200px;
 	background-color: yellow;
 	background-size: 100% 100%;
 	background-image: url('helloonce.gif');
