--- a/index_style.css
+++ b/index_style.css
@@ -14,7 +14,7 @@
 	margin-left: -200px;
 	background-color: yellow;
 	background-size: 100% 100%;
-	background-image: url('helloonce.gif');
+	background-image: url('helloinfinite.gif');
 }
 .text{
 	position: relative;
