--- a/test/georgia_style.css
+++ b/test/georgia_style.css
@@ -1,27 +1,38 @@
-.gallery{
-	text-align: center;
-	position: absolute;
-  	left: 50%;
-  	top: 45%;
-  	transform: translate(-50%, -50%);
+img{
+    width:350px;
+    margin: 0 auto;
+    display: table-cell;
+    text-align:middle;
+    vertical-align: middle;
 }
 
-img{
-    width:400px;
+
+
+
+
+.imgcontainer{
+  max-width: 700px;
+  height:70vh;
+  //background-color: blue;
+  margin: 0 auto;
 }
 
 .nav{
-	height:75px;
-	position: absolute;
-  	left: 50%;
-  	top: 92%;
-  	transform: translate(-50%, -25%);
-
+	height:30px;
+	position: relative;
+  margin: 0 auto 0 auto;
+  max-width: 300px;
+  background-color: blue;
+}
+.nav img{
+  display: inline-block;
+  width:25px;
 }
 .home{
-	height:75px;
-	position: absolute;
-  	left: 50%;
-  	top: 95.5%;
-  	transform: translate(-50%, -25%);
+  margin:0 auto 0 auto;
+  position: relative;
+}
+
+.home img{
+  position:relative;
 }
