--- a/georgia_style.css
+++ b/georgia_style.css
@@ -1,29 +1,28 @@
-img{
-    width:350px;
-    margin: 0 auto;
-    display: table-cell;
-    text-align:middle;
-    vertical-align: middle;
+.gallery{
+	margin: 0 auto;
+	display: inline-block;
+	//display: inline-flex;
+	align-items: center;
+  	width: 10vw;
+  	height:70vh;
 }
 
-
-
-
-
-.imgcontainer{
-  max-width: 700px;
-  height:70vh;
-  //background-color: blue;
-  margin: 0 auto;
+.gallery img{
+    width:30vw;
+    position: center;
+  	margin: 0 auto 0 auto;
 }
 
 .nav{
-	height:30px;
+	display:flex;
+	align-items:center;
+	//height:30px;
 	position: relative;
-  margin: 0 auto 0 auto;
-  max-width: 300px;
-  background-color: blue;
+  	margin: 0 auto 0 auto;
+  	//background-color: blue;
+ 	width:20vw;
 }
+
 .nav img{
   display: inline-block;
   width:25px;
@@ -36,3 +35,4 @@ img{
 .home img{
   position:relative;
 }
+
