--- a/index_style.css
+++ b/index_style.css
@@ -11,18 +11,44 @@
     
 }
 img {
-	max-height: 100%;
+  max-height: 100%;
   max-width: 100%;
+  opacity: 1;
+  filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+img:hover {
+	opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
 }
 .cv{
   width:100px;
   margin: 0 auto 0 auto;
 }
-
+.facelink{
+	opacity:0;
+}
 .face{
 	width:100px;
-	height: 135px;
-  margin: 0 auto 0 auto;
+	height:135px;
+	background: url("face2.jpg");
+	background-size: contain;
+	border-radius: 15px;
+    margin: 0 auto 0 auto;
+}
+
+.face:hover {
+	background:url("face3.jpg");
+	transition: 1s ease;
+	background-size: contain;
+}
+
+.text {
+	color:white;
+	font-size: 20px;
+	position: absolute;
+	top: 70%;
+	bottom: 30%;
+	transform: :translate(-50%, -50%);
 }
 
 .portfolio{
